@@ -194,7 +194,7 @@ public class SuccessServlet extends AbstractShowPageServlet {
          *         representation for the given language code.
          */
         public static Optional<Language> fromCode(String code) {
-            Locale locale = new Locale(code);
+            Locale locale = Locale.of(code);
             String name = locale.getDisplayLanguage(locale);
             if (name.isEmpty()) {
                 return Optional.empty();
